--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <div id="sticky-div" class="image-container" style="background-image: url('img/gogim.png');"><p>HOME</p></div>
+    <div id="sticky-div" class="image-container" style="background-image: url('img/gogim.png');">
+        <p>@eliash9</p>
+    </div>
 
-</div>
 
 <script>
     // Fetch the JSON data
